src/main/resources/cpp/tests/neg/N11_this_name.cpp
int main() {
    *this; // Fehler: 'this' bzw. '*this' ist nur im Methoden-Kontext erlaubt

    return 0;
}
